--- a/src/app/common/contact-form/contact/contact.component.scss
+++ b/src/app/common/contact-form/contact/contact.component.scss
@@ -38,3 +38,13 @@ textarea, input {
   display: none;
 }
 
+.btn {
+  background-color: #006199;
+  color: white;
+}
+
+@media screen and (max-height: 600px) {
+  .btn {
+    width: 100%;
+  }
+}
