--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -16,18 +16,11 @@
 }
 
 
-
-h5 {
-  color: #006199;
-  font-size: 1.2em;
-  padding-top: 10px;
-}
-
-
 #homePage {
   margin-left: 0px;
   margin-right: 0px;
 }
+
 /*   Jumbotron   */
 #homePageJumbotron {
   background-color: #007abf;
